--- a/charts/steadybit-extension-azure/Chart.yaml
+++ b/charts/steadybit-extension-azure/Chart.yaml
@@ -1,15 +1,15 @@
 apiVersion: v2
-name: steadybit-extension-scaffold
+name: steadybit-extension-azure
 description: Steadybit scaffold extension Helm chart for Kubernetes.
-version: 1.0.17
+version: 1.0.0
 appVersion: latest
 home: https://www.steadybit.com/
 icon: https://steadybit-website-assets.s3.amazonaws.com/logo-symbol-transparent.png
 maintainers:
-  - email: daniel.reuter@steadybit.com
-    name: reuda
+  - email: ansgar.schulte@steadybit.com
+    name: ansgarschulte
 sources:
-  - https://github.com/steadybit/extension-scaffold
+  - https://github.com/steadybit/extension-azure
 annotations:
   artifacthub.io/images: |
     - name: logo
