--- a/charts/steadybit-extension-azure/values.yaml
+++ b/charts/steadybit-extension-azure/values.yaml
@@ -91,3 +91,11 @@ extraEnv: []
 #  - secretRef:
 #    name: env-secrets
 extraEnvFrom: []
+
+azure:
+  clientID: ""
+  clientSecret: ""
+  tenantID: ""
+  subscriptionID: ""
+  certificatePath: ""
+  certificatePassword: ""
