--- a/charts/steadybit-extension-azure/templates/deployment.yaml
+++ b/charts/steadybit-extension-azure/templates/deployment.yaml
@@ -41,6 +41,18 @@ spec:
               memory: {{ .Values.resources.limits.memory }}
               cpu: {{ .Values.resources.limits.cpu }}
           env:
+            - name: AZURE_CLIENT_ID
+              value: {{ .Values.azure.clientID | quote }}
+            - name: AZURE_TENANT_ID
+              value: {{ .Values.azure.tenantID | quote }}
+            - name: AZURE_CLIENT_SECRET
+              value: {{ .Values.azure.clientSecret | quote }}
+            - name: AZURE_SUBSCRIPTION_ID
+              value: {{ .Values.azure.subscriptionID | quote }}
+            - name: STEADYBIT_EXTENSION_AZURE_CERTIFICATE_LOCATION
+              value: {{ .Values.azure.certificatePath | quote }}
+            - name: STEADYBIT_EXTENSION_AZURE_CERTIFICATE_PASSWORD
+              value: {{ .Values.azure.certificatePassword | quote }}
             {{- include "extensionlib.deployment.env" (list .) | nindent 12 }}
             {{- with .Values.extraEnv }}
               {{- toYaml . | nindent 12 }}
