--- a/charts/steadybit-extension-azure/values.yaml
+++ b/charts/steadybit-extension-azure/values.yaml
@@ -93,9 +93,12 @@ extraEnv: []
 extraEnvFrom: []
 
 azure:
-  clientID: ""
-  clientSecret: ""
-  tenantID: ""
-  subscriptionID: ""
-  certificatePath: ""
-  certificatePassword: ""
+  clientID: null
+  clientSecret: null
+  tenantID: null
+  subscriptionID: null
+  certificatePath: null
+  certificatePassword: null
+  userAssertionString: null
+  # azure.existingSecret -- If defined, will skip secret creation and instead assume that the referenced secret contains the keys clientID, clientSecret, tenantID, subscriptionID, certificatePath, certificatePassword, userAssertionString
+  existingSecret: null
