fix: helm chart secrets

--- a/charts/steadybit-extension-azure/tests/deployment_test.yaml
+++ b/charts/steadybit-extension-azure/tests/deployment_test.yaml
@@ -78,6 +78,8 @@ tests:
   - it: manifest should match snapshot with azure certificates vars
     set:
       azure:
+        clientID: "clientId"
+        tenantID: "tenantId"
         certificatePath: "/tmp/certificatePath"
         certificatePassword: "certificatePassword"
     asserts:
