--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.tests=.
 sonar.test.inclusions=**/*_test.go
 
 sonar.go.coverage.reportPaths=coverage.out,e2e/e2e-coverage-docker.out
+sonar.cpd.exclusions=extvm/vm_discovery.go
