--- a/charts/steadybit-extension-azure/templates/service.yaml
+++ b/charts/steadybit-extension-azure/templates/service.yaml
@@ -1,1 +1,1 @@
-{{- include "extensionlib.service" (list . 8092 (list "ACTION" "DISCOVERY" "EVENT")) -}}
+{{- include "extensionlib.service" (list . 8092 (list "ACTION" "DISCOVERY")) -}}
