--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - uses: actions/setup-go@v4
         with:
-          go-version: '^1.20.0'
+          go-version: '1.20'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
