--- a/charts/steadybit-extension-azure/templates/deployment.yaml
+++ b/charts/steadybit-extension-azure/templates/deployment.yaml
@@ -85,6 +85,14 @@ spec:
                   name: {{ include "azure.secret.name" . }}
                   key: userAssertionString
                   optional: true
+            {{- if .Values.discovery.attributes.excludes.scaleSetInstance }}
+            - name: STEADYBIT_EXTENSION_DISCOVERY_ATTRIBUTES_EXCLUDES_SCALE_SET_INSTANCE
+              value: {{ join "," .Values.discovery.attributes.excludes.scaleSetInstance | quote }}
+            {{- end }}
+            {{- if .Values.discovery.attributes.excludes.vm }}
+            - name: STEADYBIT_EXTENSION_DISCOVERY_ATTRIBUTES_EXCLUDES_VM
+              value: {{ join "," .Values.discovery.attributes.excludes.vm | quote }}
+            {{- end }}
             {{- include "extensionlib.deployment.env" (list .) | nindent 12 }}
             {{- with .Values.extraEnv }}
               {{- toYaml . | nindent 12 }}
