--- a/charts/steadybit-extension-azure/tests/deployment_test.yaml
+++ b/charts/steadybit-extension-azure/tests/deployment_test.yaml
@@ -84,3 +84,15 @@ tests:
         certificatePassword: "certificatePassword"
     asserts:
       - matchSnapshot: { }
+  - it: manifest should match snapshot with podSecurityContext
+    set:
+      podSecurityContext:
+        runAsUser: 2222
+    asserts:
+      - matchSnapshot: {}
+
+  - it: manifest should match snapshot with priority class
+    set:
+      priorityClassName: my-priority-class
+    asserts:
+      - matchSnapshot: {}
