--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
     name: "Test Helm Charts"
     runs-on: ubuntu-latest
     needs:
-      - build-images
+      - audit
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -162,7 +162,7 @@ jobs:
     name: "Release Helm Chart"
     runs-on: ubuntu-latest
     needs:
-      - audit
+      - test-helm-charts
     if: github.ref == 'refs/heads/main'
 
     permissions:
