--- a/charts/steadybit-extension-azure/Chart.yaml
+++ b/charts/steadybit-extension-azure/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: steadybit-extension-azure
 description: Steadybit azure extension Helm chart for Kubernetes.
-version: 1.0.14
-appVersion: latest
+version: 1.1.0
+appVersion: v1.0.8
 home: https://www.steadybit.com/
 icon: https://steadybit-website-assets.s3.amazonaws.com/logo-symbol-transparent.png
 maintainers:
