--- a/charts/steadybit-extension-azure/values.yaml
+++ b/charts/steadybit-extension-azure/values.yaml
@@ -151,3 +151,7 @@ discovery:
       vm: []
       # discovery.attributes.excludes.scaleSetInstance -- List of attributes to exclude from scaleSetInstance discovery.
       scaleSetInstance: []
+      # discovery.attributes.excludes.azureFunction -- List of attributes to exclude from azureFunction discovery.
+      azureFunction: []
+      # discovery.attributes.excludes.networkSecurityGroup -- List of attributes to exclude from networkSecurityGroup discovery.
+      networkSecurityGroup: []
