feat: azure app configuration target

--- a/charts/steadybit-extension-azure/templates/deployment.yaml
+++ b/charts/steadybit-extension-azure/templates/deployment.yaml
@@ -104,8 +104,8 @@ spec:
               value: {{ join "," .Values.discovery.attributes.excludes.vm | quote }}
             {{- end }}
             {{- if .Values.discovery.attributes.excludes.azureFunction }}
-            - name: STEADYBIT_EXTENSION_DISCOVERY_ATTRIBUTES_EXCLUDES_AZURE_FUNCTION
-              value: {{ join "," .Values.discovery.attributes.excludes.azureFunction | quote }}
+            - name: STEADYBIT_EXTENSION_DISCOVERY_ATTRIBUTES_EXCLUDES_APP_CONFIGURATION
+              value: {{ join "," .Values.discovery.attributes.excludes.appConfiguration | quote }}
             {{- end }}
             {{- if .Values.discovery.attributes.excludes.networkSecurityGroup }}
             - name: STEADYBIT_EXTENSION_DISCOVERY_ATTRIBUTES_EXCLUDES_NETWORK_SECURITY_GROUP
@@ -115,8 +115,8 @@ spec:
               value: "{{ if .Values.discovery.enable.vm }}true{{ else }}false{{ end }}"
             - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_SCALE_INSTANCES
               value: "{{ if .Values.discovery.enable.scaleSetInstance }}true{{ else }}false{{ end }}"
-            - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_AZURE_FUNCTIONS
-              value: "{{ if .Values.discovery.enable.azureFunction }}true{{ else }}false{{ end }}"
+            - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_APP_CONFIGURATIONS
+              value: "{{ if .Values.discovery.enable.appConfiguration }}true{{ else }}false{{ end }}"
             - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_NETWORK_SECURITY_GROUPS
               value: "{{ if .Values.discovery.enable.networkSecurityGroup }}true{{ else }}false{{ end }}"
             {{- include "extensionlib.deployment.env" (list .) | nindent 12 }}
