--- a/charts/steadybit-extension-azure/values.yaml
+++ b/charts/steadybit-extension-azure/values.yaml
@@ -143,7 +143,7 @@ discovery:
   enable:
     vm: true
     scaleSetInstance: true
-    azureFunction: false
+    appConfiguration: false
     networkSecurityGroup: false
   attributes:
     excludes:
@@ -151,7 +151,7 @@ discovery:
       vm: []
       # discovery.attributes.excludes.scaleSetInstance -- List of attributes to exclude from scaleSetInstance discovery.
       scaleSetInstance: []
-      # discovery.attributes.excludes.azureFunction -- List of attributes to exclude from azureFunction discovery.
-      azureFunction: []
+      # discovery.attributes.excludes.appConfiguration -- List of attributes to exclude from azureFunction discovery.
+      appConfiguration: []
       # discovery.attributes.excludes.networkSecurityGroup -- List of attributes to exclude from networkSecurityGroup discovery.
       networkSecurityGroup: []
