--- a/charts/steadybit-extension-azure/values.yaml
+++ b/charts/steadybit-extension-azure/values.yaml
@@ -140,9 +140,18 @@ azure:
   existingSecret: null
 
 discovery:
+  enable:
+    vm: true
+    scaleSetInstance: true
+    appConfiguration: false
+    networkSecurityGroup: false
   attributes:
     excludes:
       # discovery.attributes.excludes.vm -- List of attributes to exclude from VM discovery.
       vm: []
       # discovery.attributes.excludes.scaleSetInstance -- List of attributes to exclude from scaleSetInstance discovery.
       scaleSetInstance: []
+      # discovery.attributes.excludes.appConfiguration -- List of attributes to exclude from azureFunction discovery.
+      appConfiguration: []
+      # discovery.attributes.excludes.networkSecurityGroup -- List of attributes to exclude from networkSecurityGroup discovery.
+      networkSecurityGroup: []
