--- a/charts/steadybit-extension-azure/templates/deployment.yaml
+++ b/charts/steadybit-extension-azure/templates/deployment.yaml
@@ -115,10 +115,12 @@ spec:
               value: "{{ if .Values.discovery.enable.vm }}true{{ else }}false{{ end }}"
             - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_SCALE_INSTANCES
               value: "{{ if .Values.discovery.enable.scaleSetInstance }}true{{ else }}false{{ end }}"
-            - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_APP_CONFIGURATIONS
-              value: "{{ if .Values.discovery.enable.appConfiguration }}true{{ else }}false{{ end }}"
+            - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_CONTAINER_APPS
+              value: "{{ if .Values.discovery.enable.containerApp }}true{{ else }}false{{ end }}"
             - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_NETWORK_SECURITY_GROUPS
               value: "{{ if .Values.discovery.enable.networkSecurityGroup }}true{{ else }}false{{ end }}"
+            - name: STEADYBIT_EXTENSION_DISCOVERY_ENABLE_AZURE_FUNCTIONS
+              value: "{{ if .Values.discovery.enable.azureFunction }}true{{ else }}false{{ end }}"
             {{- include "extensionlib.deployment.env" (list .) | nindent 12 }}
             {{- with .Values.extraEnv }}
               {{- toYaml . | nindent 12 }}
